# dreamaware.cc

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CODEOWNERS  Changes  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.md  README.old.md  SECURITY.md  coverage.xml  deduped_output.jsonl  docker-compose.yml  dummy_input.jsonl  file tree   go.mod  index.html  jules.config.yaml  layer_governance.sh  links-of-interest.md  lychee.toml  mkdocs.yml  package-lock.json  package.json  patch_followup.sh  patch_to_apply.patch  pyproject.toml  requirements.txt  seed-issues.patch  server.tsconfig.json  test-rekor-workflow.sh  test-workflow.sh  tsconfig.json  validate-acceptance.sh  (+2 more)
.github/: CODEOWNERS  codeql.yml  copilot-coding-agent.md  dependabot.yml  gitleaks.toml  issue_seeds.yaml  labeler.yml  pull_request_template.md
.jules/: memory.json
.prompt/: system.md
.roo/: config.json
__tests__/: policy-parity.spec.ts
agents/: README.md
api/: orchestrator.ts
apps/: orb-demo.html
citations/: ai.json  schema.json
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
clients/: dread_client.py
config/: models.example.yaml
configs/: ai_providers.yaml  limits.yaml  llm_routing.json  syzygy_matrix.schema.json  syzygy_matrix.yaml  training.yaml
dashboards/: kev_coverage.json
database/: init.sql
db/: ddl_merkle_integrity.sql
docs/: INTEGRATIONS.md  README.md  REKOR_ANCHORING_RUNBOOK.md  agentics.md  citations.md  database-schema.sql  development_map.md  (+19 more)
(+413 files in other folders)
