[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dreamaware_ai"
version = "0.1.0"
description = "Agentic AI, Cybersecurity, and Computational Science Platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pyyaml",
    "pydantic",
    "GitPython",
    "jwcrypto",
]

[project.optional-dependencies]
api = [
    "fastapi",
    "uvicorn[standard]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["services*", "packages*"]
 

